# nme-percy

./: README.md  pyproject.toml  script.md  setup.py
debug_results/: diagnostic_report.txt
models/: q_agent.npz
models/rl/: simple_agent.npz
notebooks/: depth_estimation_demo.ipynb  grid_conversion_demo.ipynb  navigation_env_demo.ipynb  path_planning_demo.ipynb
results/grid_maps/: city_depth_grid.npy
results/planning/: test_grid.npy
results/raw_depth/: city_depth.npy  street_depth.npy
scripts/: batch_depth_estimation.py  batch_grid_conversion.py  convert_depth_to_grid.py  download_sample_image.py  estimate_depth.py  test_navigation_env.py  test_path_planning.py  train_rl_agent.py
src/: __init__.py
src/agents/: README.md  __init__.py  q_learning.py
src/depth_estimation/: README.md  __init__.py  midas.py  utils.py
src/environments/: README.md  __init__.py  navigation_env.py
src/grid_conversion/: README.md  __init__.py  converter.py
src/planning/: README.md  __init__.py  a_star.py
src/utils/: __init__.py  grid_utils.py  test_utils.py
src/visualization/: __init__.py  env_visualizer.py  grid_visualizer.py  rl_visualizer.py
tests/: test_depth_estimation.py  test_grid_conversion.py  test_navigation_env.py  test_planning.py  test_rl_agents.py
